<resources>
    <string name="app_name">GardenWeather</string>
    <string name="now">Сейчас</string>
    <string name="temperature_now">20\u00B0</string>
    <string name="temp_Night">16\u00B0</string>
    <string name="temp_hour1">20\u00B0</string>
    <string name="hour1">1</string>
    <string name="temp_hour2">20\u00B0</string>
    <string name="hour2">2</string>
    <string name="temp_hour3">18\u00B0</string>
    <string name="hour3">3</string>
    <string name="temp_hour4">18\u00B0</string>
    <string name="hour4">4</string>
    <string name="temp_hour5">18\u00B0</string>
    <string name="hour5">5</string>
    <string name="temp_hour6">18\u00B0</string>
    <string name="hour6">6</string>
    <string name="temp_hour7">16\u00B0</string>
    <string name="hour7">7</string>
    <string name="temp_hour8">16\u00B0</string>
    <string name="hour8">8</string>
    <string name="temp_hour9">16\u00B0</string>
    <string name="hour9">9</string>
    <string name="temp_hour10">16\u00B0</string>
    <string name="hour10">10</string>
    <string name="temp_hour11">14\u00B0</string>
    <string name="hour11">11</string>
    <string name="temp_hour12">14\u00B0</string>
    <string name="hour12">12</string>
    <string name="temp_hour13">14\u00B0</string>
    <string name="hour13">13</string>
    <string name="temp_hour14">19\u00B0</string>
    <string name="hour14">14</string>
    <string name="temp_hour15">19\u00B0</string>
    <string name="hour15">15</string>
    <string name="temp_hour16">19\u00B0</string>
    <string name="hour16">16</string>
    <string name="temp_hour17">20\u00B0</string>
    <string name="hour17">17</string>
    <string name="temp_hour18">20\u00B0</string>
    <string name="hour18">18</string>
    <string name="temp_hour19">20\u00B0</string>
    <string name="hour19">19</string>
    <string name="temp_hour20">21\u00B0</string>
    <string name="hour20">20</string>
    <string name="temp_hour21">21\u00B0</string>
    <string name="hour21">21</string>
    <string name="temp_hour22">21\u00B0</string>
    <string name="hour22">22</string>
    <string name="temp_hour23">21\u00B0</string>
    <string name="hour23">23</string>
    <string name="todo">TODO</string>
    <string name="city">Обнинск</string>
    <string name="weekly">Понедельник</string>
    <string name="hint_find">Find city</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>