<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".LinerHours">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                style="@style/style_text_hours"
                android:layout_width="wrap_content"
                android:text="@string/now" />

            <ImageView
                android:id="@+id/imageView1"
                style="@style/style_image_hours"
                app:srcCompat="@drawable/ic_sunny2" />

            <TextView
                android:id="@+id/textView2"
                style="@style/style_text_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/temperature_now"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/hour1"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />

            <ImageView
                android:id="@+id/imageView2"
                style="@style/style_image_hours"
                app:srcCompat="@drawable/ic_sunny" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/temp_hour1"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/hour2"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />

            <ImageView
                android:id="@+id/imageView3"
                style="@style/style_image_hours"
                app:srcCompat="@drawable/ic_sunny" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/temp_hour2"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                style="@style/style_text_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hour3"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />

            <ImageView
                android:id="@+id/imageView4"
                style="@style/style_image_hours"
                app:srcCompat="@drawable/ic_cloudy2" />

            <TextView
                android:id="@+id/textView8"
                style="@style/style_text_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp_hour3"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/hour4"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />

            <ImageView
                android:id="@+id/imageView5"
                style="@style/style_image_hours"
                app:srcCompat="@drawable/ic_sunny" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/temp_hour4"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/hour5"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />

            <ImageView
                android:id="@+id/imageView6"
                style="@style/style_image_hours"
                app:srcCompat="@drawable/ic_sunny" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/temp_hour5"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/hour6"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />

            <ImageView
                android:id="@+id/imageView7"
                style="@style/style_image_hours"
                app:srcCompat="@drawable/ic_sunny" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/temp_hour6"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/hour7"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />

            <ImageView
                android:id="@+id/imageView8"
                style="@style/style_image_hours"
                app:srcCompat="@drawable/ic_sunny" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/temp_hour7"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/hour8"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />

            <ImageView
                android:id="@+id/imageView9"
                style="@style/style_image_hours"
                app:srcCompat="@drawable/ic_cloudy" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/temp_hour8"
                android:textAlignment="center"
                android:textColor="@color/colorTempDey" />
        </LinearLayout>
    </LinearLayout>

</HorizontalScrollView>